# my-general-ai-work-

./: README.md  demo-agentic-rag.ipynb  requirements.txt
.ipynb_checkpoints/: demo-agentic-rag-checkpoint.ipynb
Bridge-Academy-Chatbot-Solutions/Bridge-Academy-Simple-Prototype-Solution-modified/: agentic_workflow_v2.py  configs.py  data_model.py  main.py  main_gradio.py  preliminary-business-requirement-notes.txt  school_timetable.db  sql_inserts.txt  tools.py
Bridge-Academy-Chatbot-Solutions/Bridge-Academy-Simple-Prototype-Solution-original/: agentic_workflow.py  data_model.py  full_test_chatbot_prototype.py  main.py  main_gradio.py  school_timetable.db  tools.py
IntroToDimensionalityReduction/: demo_pca.ipynb
IntroToDimensionalityReduction/.ipynb_checkpoints/: demo_pca-checkpoint.ipynb
a2a-simple-demo/: requirements.txt
a2a-simple-demo/src/: agent_a.py  agent_b.py  configs.py  demo.ipynb  mcp_currency_server.py  mcp_datetime_server.py  simple_logger.py
docs/: doc_pickle_data_file.pl
document-classification/: duplicate_document_classifier.ipynb  instructions.txt  requirements.txt
document-classification/modules/: classifier_model.py  clean_data.py  document_vectorizer.py  enums.py  simple_dnn_classifier.py
language-models-fundermentals/: ai-thursdays-session-8-lab-1.ipynb  another_sentiment_analysis_solution.ipynb  code-notes.txt  requirements.txt  using-word-embeddings-for-sentiment-analysis.ipynb
language-models-fundermentals/ai-thursdays-session-11/: data.7z
language-models-fundermentals/ai-thursdays-session-11/notebooks/: financial_news_review_rnn_sentiment_analysis_solution.ipynb  pytorch_bidirectional_lstm_sentimet_analyser.ipynb
language-models-fundermentals/ai-thursdays-session-11/sample_code_on rnns/SequenceModeling-main/: .gitignore  README.md  README_HF.md  requirements.txt
language-models-fundermentals/ai-thursdays-session-12/notebooks/: financial_news_review_rnn_sentiment_analysis_solution.ipynb  implementation.ipynb
language-models-fundermentals/ai-thursdays-session-13/CNN-Model-Solutions/: Advanced-text-classifier-using-1D-CNN.ipynb  MNIST-image-classifier-using-CNN-V2.ipynb  MNIST-image-classifier-using-CNN.ipynb  Simple-text-classifier-using-1D-CNN.ipynb
language-models-fundermentals/ai-thursdays-session-13/CNN-Model-Solutions/models/: model_simple_cnn.pth
language-models-fundermentals/ai-thursdays-session-13/CNN-Model-Solutions/modules/: configs_advanced.py  utils.py  (+2 more)
language-models-fundermentals/ai-thursdays-session-15/Autoencoder-Model-Solutions-Modified/: Anomaly-detection-of-MNIST-images.ipynb  requirements.txt  test-simple-autoencoder-anomaly-detection.ipynb
language-models-fundermentals/ai-thursdays-session-16/Autoencoder-Model-Solution/: basic-anomaly-detection-of-financial-data.ipynb  basic-anomaly-detection-tensorflow-of-financial-data.ipynb  notes.md
language-models-fundermentals/ai-thursdays-session-9/: ai-thursdays-session-9-intro-deep-learning.ipynb  ai-thursdays-session-9-lab-2.ipynb  pytorch-images.tar  requirements.txt  simple-market-direction-classifier.ipynb
language-models-fundermentals/ai-thursdays-session-9/data/: subset_sp_data.csv
language-models-fundermentals/ai-thursdays-session-9/modules/: configs.py  dnn_classifier.py  dnn_classifier_v2.py  dnn_data_loader.py  feature_engineering.py  logistic_regression_classifier.py  performance_report.py  plot_results.py
language-models-fundermentals/data/: financial_sentiment_data.csv
neural-net-regressor-demo/: demo_neural_net_regressor.py  demo_simple_regression_with_dnn.py
onnx-cpp-demo-version-3/.devcontainer/: Dockerfile  devcontainer.json
onnx-cpp-demo-version-3/src/: main.cpp
onnx-cpp-demo-version-4/: CMakeLists.txt  README.md  samples.csv
onnx-cpp-demo-version-4/.devcontainer/: Dockerfile  devcontainer.json
onnx-cpp-demo-version-4/models/: iris_logreg.onnx
onnx-cpp-demo-version-4/python/: predict_py.py  train_iris.py
onnx-cpp-demo-version-4/src/: main.cpp  main.cpp.old
onnx_interop_for_linux_demo/another-demo/: CMakeLists.txt  improved_main.cpp  instruction-notes.txt  main.cpp  main_simple.cpp
onnx_interop_for_linux_demo/another-demo/models/: iris_logreg.onnx  model.onnx
onnx_interop_for_linux_demo/another-demo/python/: predict_py.py  requirements.txt  train_iris.py
onnx_interop_for_linux_demo/onnx-cpp-demo/: CMakeLists.txt  run_instructions
onnx_interop_for_linux_demo/onnx-cpp-demo/.devcontainer/: Dockerfile  devcontainer.json
onnx_python_2_cpp_conda_interop_forge/xgb-diabetes-onnx/: instruction-notes.txt
onnx_python_2_cpp_conda_interop_forge/xgb-diabetes-onnx/cpp/: CMakeLists.txt  main.cpp  main_original.cpp
onnx_python_2_cpp_conda_interop_forge/xgb-diabetes-onnx/onnx-runtime/: onnxruntime-cpp-1.22.0-h50ebc8d_0_cpu_win.conda
onnx_python_2_cpp_conda_interop_forge/xgb-diabetes-onnx/python/: diabetes_test_set.csv  requirements.txt  train_and_export.py  xgb_diabetes.onnx  xgb_sklearn_diabetes.joblib
xgboost_python_2_cpp_interop/: instruction-notes.txt
xgboost_python_2_cpp_interop/cpp/: CMakeLists.txt
xgboost_python_2_cpp_interop/cpp/xgboost/lib/: xgboost.lib
xgboost_python_2_cpp_interop/python/: instruction-notes.txt  train_xgb_diabetes.py
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_linux/xgboost-python-2-cpp-demo/: README.md
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_linux/xgboost-python-2-cpp-demo/cpp/: CMakeLists.txt  build_and_run.sh  predict_xgb_cpp.cpp
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_linux/xgboost-python-2-cpp-demo/cpp/.devcontainer/: Dockerfile  devcontainer.json  myPostScript.sh
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_linux/xgboost-python-2-cpp-demo/cpp/scripts/: postCreateCommand.sh
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_win/: instruction-notes.txt
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_win/cpp/: CMakeLists.txt  predict_xgb_cpp.cpp
xgboost_python_2_cpp_interop/xgboost_python_2_cpp_interop_win/python/: features.txt  requirements.txt  xgb_diabetes_model.json  xgb_diabetes_test.csv
(+30 files in other folders)
